server/vm-k8s/k8s/base/jsonplaceholder/service.yml
apiVersion: v1
kind: Service
metadata:
  name: jsonplaceholder
spec:
  selector:
    app: jsonplaceholder
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
