server/vm-k8s/k8s/base/jsonplaceholder/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jsonplaceholder
spec:
  rules:
  - host: "jsonplaceholder.10.0.2.15.nip.io"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jsonplaceholder
            port:
              number: 80
  ingressClassName: public
